style(docusaurus.config.js): comment out hideOnScroll property in navbar to prevent it from hiding on scroll style(custom.css): add import for 'Bubblegum Sans' font from Google Fonts style(custom.css): adjust positioning and font styles for navbar elements for better alignment and readability feat(index.mdx): add 'zadark-brand' class to the main heading for consistent branding and styling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,7 @@
  */
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap');
 
 :root {
   --ifm-font-family-base: 'Open Sans', sans-serif;
@@ -41,8 +42,23 @@
   /* var(--ifm-color-gray-900); */
 }
 
+.navbar__logo {
+  position: relative;
+  top: -1px;
+}
+
 .navbar__title {
-  font-size: 1.25rem;
+  position: relative;
+  top: 1px;
+
+  font-size: 1.5rem;
+  font-family: "Bubblegum Sans", sans-serif;
+  font-weight: 400;
+}
+
+.zadark-brand {
+  font-family: "Bubblegum Sans", sans-serif;
+  font-weight: 400;
 }
 
 .medium-zoom-image--opened, .medium-zoom-overlay {
